[gd_scene load_steps=12 format=3 uid="uid://y8sa0mrhaba8"]

[ext_resource type="Script" path="res://Tree/TreeButton.gd" id="1_6h8mh"]
[ext_resource type="Texture2D" uid="uid://bsgk80kd6jkke" path="res://assets/kenney_1-bit-pack/Tilesheet/colored.png" id="1_1778m"]
[ext_resource type="Texture2D" uid="uid://daxf52r61ekyk" path="res://assets/kenney_1-bit-pack/Tilesheet/colored-transparent.png" id="2_ue68q"]
[ext_resource type="AudioStream" uid="uid://cesyj3adtn1qo" path="res://assets/sounds/chop.wav" id="4_rtfj1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8v7vl"]
atlas = ExtResource("1_1778m")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6monn"]
atlas = ExtResource("2_ue68q")
region = Rect2(0, 17, 17, 16)

[sub_resource type="Animation" id="Animation_v6el1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.912, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, 8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_c4a8d"]
resource_name = "cut_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.912, 1), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.8,
"start_offset": 0.0,
"stream": ExtResource("4_rtfj1")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_xv7jo"]
resource_name = "grow"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(0.912, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [],
"times": PackedFloat32Array()
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_1qki4"]
resource_name = "wiggle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.0872665, 0.0872665, -0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hp4m5"]
_data = {
"RESET": SubResource("Animation_v6el1"),
"cut_down": SubResource("Animation_c4a8d"),
"grow": SubResource("Animation_xv7jo"),
"wiggle": SubResource("Animation_1qki4")
}

[node name="TreeButton" type="TextureButton"]
offset_right = 16.0
offset_bottom = 16.0
texture_normal = SubResource("AtlasTexture_8v7vl")
script = ExtResource("1_6h8mh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(8, 8)
scale = Vector2(0.912, 1)
texture = SubResource("AtlasTexture_6monn")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hp4m5")
}
autoplay = "wiggle"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
bus = &"SFX"

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
